--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
 
@@ -78,6 +79,20 @@
         <div class="text-center mt-2">
             <button class="btn btn-warning" id="btnTinhDiem">Tính điểm</button>
         </div>
+        <hr />
+        <h3>Bài tập 1: Xây dựng chức năng zoom in, zoom out cho 2 button bên dưới</h3>
+        <div>
+            <i class="fa fa-home" aria-hidden="true" id="home" style="font-size: 250px;"></i>
+            <button class="btn btn-outline-success" id="btnZoomInHome">+</button>
+            <button class="btn btn-outline-success" id="btnZoomOutHome">-</button>
+        </div>
+        <hr />
+        <h3>Bài tập 2: Xây dựng chức năng zoom in, zoom out cho 2 button bên dưới</h3>
+        <div>
+            <p id="textContent" style="font-size: 17px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ipsum amet nam culpa dolorum. Nobis, quisquam repellat omnis aperiam quasi facilis expedita. Temporibus, fugiat incidunt vitae molestiae reiciendis ab reprehenderit?</p>
+            <button class="btn btn-outline-success" id="btnZoomInText">+</button>
+            <button class="btn btn-outline-success" id="btnZoomOutText">-</button>
+        </div>
     </div>
       
     <!-- Optional JavaScript -->
@@ -85,6 +100,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
+    <script src="./js/common/method.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
